# Frotzmark

./: .env.example  .gitignore  CLAUDE.md  LICENSE  pyproject.toml  sample.txt
frotzmark/: __init__.py  __main__.py  agent.py  config.py  game_session.py  screen.py
frotzmark/prompts/: postamble.md  preamble.md
tests/: __init__.py  test_game_session.py
